--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 'Roan Comiskey Wedding'
+title: 'Bri Comiskey + Jase Roan'
 baseurl: ''
 distbase: './dist'
 imagebase: './dist/images'
