--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title: 'Bri + Jase'
 baseurl: ''
 distbase: './dist'
 imagebase: './dist/images'
+wedding_date: 'January 5, 2019'
+wedding_location: 'Chicago, Illinois'
 
 source: _src
 
