--- a/_src/_data/members.yml
+++ b/_src/_data/members.yml
@@ -1,7 +1,7 @@
 - name: 'Kait Eggers'
-  title: 'Matron of Honor'
+  title: 'Matron of Honor, Sister of the Bride'
   file: 'kait.jpg'
-  description: ''
+  description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
 - name: 'Amanda Rysiewicz'
   title: 'Matron of Honor'
   file: 'amanda.jpg'
@@ -15,7 +15,7 @@
 - name: 'Grace Gryzlo'
   file: 'grace.jpg'
   description: ''
-- name: 'Catie Schwann'
+- name: 'Catie Schwan'
   file: 'catie.jpg'
   description: ''
 - name: 'Sarah Spliethoff'
@@ -31,11 +31,11 @@
   file: 'courtney.jpg'
   description: ''
 - name: 'Matt Roan'
-  title: 'Best Man'
+  title: 'Best Man, Brother of the Groom'
   file: 'matt.jpg'
   description: ''
 - name: 'Andy Roan'
-  title: 'Best Man'
+  title: 'Best Man, Brother of the Groom'
   file: 'andy.jpg'
   description: ''
 - name: 'Alex Strand'
