--- a/_src/_data/members.yml
+++ b/_src/_data/members.yml
@@ -1,58 +1,76 @@
 - name: 'Kait Eggers'
   title: 'Matron of Honor, Sister of the Bride'
+  group: 'bride'
   file: 'kait.jpg'
-  description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
+  description: "BFF and partner in crime of the last 28 years. Share intense love of Taylor Swift and dogs. Don't share love of CrossFit."
 - name: 'Amanda Rysiewicz'
   title: 'Matron of Honor'
+  group: 'bride'
   file: 'amanda.jpg'
-  description: ''
-- name: 'Kelly Wille'
-  file: 'kelly.jpg'
-  description: ''
-- name: 'Megan McGuire'
-  file: 'megan.jpg'
-  description: ''
-- name: 'Grace Gryzlo'
-  file: 'grace.jpg'
-  description: ''
+  description: "From 3rd grade student council battles to weeknight road trips to see Kesha, we've done it all, side by side."
 - name: 'Catie Schwan'
+  group: 'bride'
   file: 'catie.jpg'
-  description: ''
-- name: 'Sarah Spliethoff'
-  file: 'sarah.jpg'
-  description: ''
-- name: 'Mary Kate Dunne'
-  file: 'marykate.jpg'
-  description: ''
-- name: 'Maggie Sack'
-  file: 'maggie.jpg'
-  description: ''
+  description: 'A Freshman year dorm best, real life roommate of 4 years, and the girl who brings out the most adventure in my soul. The only person in the world that could convince me to start watching anime.'
 - name: 'Courtney Bestler'
+  group: 'bride'
   file: 'courtney.jpg'
-  description: ''
+  description: 'My favorite person to watch sports with (sorry Jase). My champion-winning beach volleyball teammate and fearless captain. We bonded first at black light parties freshman year and have become SO MUCH MORE mature with city bottomless brunches.'
+- name: 'Grace Gryzlo'
+  group: 'bride'
+  file: 'grace.jpg'
+  description: 'Freshman year dorm buds and Kappa Dummies (Deltas) for life. #BFFmoons of tiger petting, elephant riding and monkey feeding wouldn’t be the same without this one.'
+- name: 'Kelly Wille'
+  group: 'bride'
+  file: 'kelly.jpg'
+  description: "American Idol concerts. Frisco melts. Creating the perfect emo mix tapes. Pool days at Lou and Jeanne's. These are only a few of my favorite activities with Kel the past 15+ years."
+- name: 'Maggie Sack'
+  group: 'bride'
+  file: 'maggie.jpg'
+  description: 'Rounding out the Van Doren dorm University of Illinois girl crew is my bocce partner, always-down-to-do-anything Friday night couch companion.'
+- name: 'Mary Kate Dunne'
+  group: 'bride'
+  file: 'marykate.jpg'
+  description: 'You used to be able to find us traveling to Delaware, New Orleans, and all over Chicago for music festivals and concerts. Now, you are more likely to find us Monday nights crafting haikus and spells and utilizing them on the bocce court.'
+- name: 'Megan McGuire'
+  group: 'bride'
+  file: 'megan.jpg'
+  description: "Soccer teammate of 7 years, DMB concert bud of 5 years, and BFF of over 15 years. Sneaking out and summer bucket lists wouldn't be the same without her."
+- name: 'Sarah Spliethoff'
+  group: 'bride'
+  file: 'sarah.jpg'
+  description: 'My fried chicken club better-half, always inspiring me to have a greener thumb and pick up ALL of the new and exciting hobbies (homemade wreaths) and trying ALL the new activities (river tubing).'
 - name: 'Matt Roan'
   title: 'Best Man, Brother of the Groom'
+  group: 'groom'
   file: 'matt.jpg'
   description: ''
 - name: 'Andy Roan'
   title: 'Best Man, Brother of the Groom'
+  group: 'groom'
   file: 'andy.jpg'
   description: ''
 - name: 'Alex Strand'
+  group: 'groom'
   file: 'alex.gif'
   description: ''
 - name: 'Brendan Damm'
+  group: 'groom'
   file: 'brendan.jpg'
   description: ''
 - name: 'Matt DuBois'
+  group: 'groom'
   file: 'dubois.jpg'
   description: ''
 - name: 'Kyle Crowe'
+  group: 'groom'
   file: 'kyle.jpg'
   description: ''
 - name: 'Scott Skuteris'
+  group: 'groom'
   file: 'scott.jpg'
   description: ''
 - name: 'Rob Sefer'
+  group: 'groom'
   file: 'rob.jpg'
   description: ''
