--- a/_src/_data/members.yml
+++ b/_src/_data/members.yml
@@ -52,7 +52,7 @@
   description: ''
 - name: 'Alex Strand'
   group: 'groom'
-  file: 'alex.gif'
+  file: 'alex.jpg'
   description: ''
 - name: 'Brendan Damm'
   group: 'groom'
