--- a/_src/_data/members.yml
+++ b/_src/_data/members.yml
@@ -2,6 +2,7 @@
   title: 'Matron of Honor, Sister of the Bride'
   group: 'bride'
   file: 'kait.jpg'
+  file_full: 'kait.jpg'
   description: "BFF and partner in crime of the last 28 years. Share intense love of Taylor Swift and dogs. Don't share love of CrossFit."
 - name: 'Amanda Rysiewicz'
   title: 'Matron of Honor'
@@ -30,18 +31,22 @@
 - name: 'Maggie Sack'
   group: 'bride'
   file: 'maggie.jpg'
+  file_full: 'maggie.jpg'
   description: 'Rounding out the Van Doren dorm University of Illinois girl crew is my bocce partner, always-down-to-do-anything Friday night couch companion.'
 - name: 'Mary Kate Dunne'
   group: 'bride'
   file: 'marykate.jpg'
+  file_full: 'marykate.jpg'
   description: 'You used to be able to find us traveling to Delaware, New Orleans, and all over Chicago for music festivals and concerts. Now, you are more likely to find us Monday nights crafting haikus and spells and utilizing them on the bocce court.'
 - name: 'Megan McGuire'
   group: 'bride'
   file: 'megan.jpg'
+  file_full: 'megan.jpg'
   description: "Soccer teammate of 7 years, DMB concert bud of 5 years, and BFF of over 15 years. Sneaking out and summer bucket lists wouldn't be the same without her."
 - name: 'Sarah Spliethoff'
   group: 'bride'
   file: 'sarah.jpg'
+  file_full: 'sarah.jpg'
   description: 'My fried chicken club better-half, always inspiring me to have a greener thumb and pick up ALL of the new and exciting hobbies (homemade wreaths) and trying ALL the new activities (river tubing).'
 - name: 'Matt Roan'
   title: 'Best Man, Brother of the Groom'
