--- a/_src/_data/members.yml
+++ b/_src/_data/members.yml
@@ -48,38 +48,38 @@
   file: 'sarah.jpg'
   file_full: 'sarah.jpg'
   description: 'My fried chicken club better-half, always inspiring me to have a greener thumb and pick up ALL of the new and exciting hobbies (homemade wreaths) and trying ALL the new activities (river tubing).'
-- name: 'Matt Roan'
-  title: 'Best Man, Brother of the Groom'
-  group: 'groom'
-  file: 'matt.jpg'
-  description: ''
 - name: 'Andy Roan'
   title: 'Best Man, Brother of the Groom'
   group: 'groom'
   file: 'andy.jpg'
-  description: ''
+  description: "Great brother, soon-to-be father and 3-time Stanley Cup Champion with the rings to prove it. One of the best guys you'll ever meet and an easy choice for co-best man."
+- name: 'Matt Roan'
+  title: 'Best Man, Brother of the Groom'
+  group: 'groom'
+  file: 'matt.jpg'
+  description: "Great brother, Chicago's hottest DJ and ultimate party starter. The guy is a beauty of a human and will serve as the other half of the best man tandem."
+- name: 'Kyle Crowe'
+  group: 'groom'
+  file: 'kyle.jpg'
+  description: "Lover of black pets and a real wiz in the kitchen. Likely to request a song at the reception that no one, including the DJ, has ever heard of. It's an emo-free wedding. Sorry bud."
+- name: 'Brendan Damm'
+  group: 'groom'
+  file: 'brendan.jpg'
+  description: "The ace of the Wet Bandits and a guy that just bleeds BIRD RED. I've lived with Brendan in four different apartments, and there's no one I'd rather kill a rat with."
+- name: 'Matt DuBois'
+  group: 'groom'
+  file: 'dubois.jpg'
+  description: "A loyal friend of 23+ years, Matt sports a mane that makes Mufasa look like a chump. Quick power ranking of favorite 'Matts': 1) Regular Matt  2) Cali Matt  96) Fantasy Matt"
+- name: 'Rob Sefer'
+  group: 'groom'
+  file: 'rob.jpg'
+  description: "CEO of Sefer Design Co. (a one-stop shop for all your design needs). Rob is the creator of this website and our save-the-dates, and is one of the best friends anyone could ask for. He's sacrificing his weekly <em>Saturday Stations</em> to be a part of the wedding, and it means a lot to me."
+- name: 'Scott Skuteris'
+  group: 'groom'
+  file: 'scott.jpg'
+  description: "2006 IHSA Football All-State Selection, constant nap candidate and all-around great guy. In 10 years when Scott's hoisting the Lombardi Trophy as GM of the Super Bowl Champion Cleveland Browns, I'm going to brag to all four of my remaining friends that Scott stood up in my wedding."
 - name: 'Alex Strand'
   group: 'groom'
   file: 'alex.jpg'
   file_full: 'alex.gif'
-  description: ''
-- name: 'Brendan Damm'
-  group: 'groom'
-  file: 'brendan.jpg'
-  description: ''
-- name: 'Matt DuBois'
-  group: 'groom'
-  file: 'dubois.jpg'
-  description: ''
-- name: 'Kyle Crowe'
-  group: 'groom'
-  file: 'kyle.jpg'
-  description: ''
-- name: 'Scott Skuteris'
-  group: 'groom'
-  file: 'scott.jpg'
-  description: ''
-- name: 'Rob Sefer'
-  group: 'groom'
-  file: 'rob.jpg'
-  description: ''
+  description: "Being the lone Northie in a group full of Southies can't be easy, but if anyone is up for the challenge, it's my main man StrandyFranch. Beware when engaging in conversation with Alex at the wedding - at least half of everything he says is absolute rubbish."
