--- a/_src/_data/members.yml
+++ b/_src/_data/members.yml
@@ -73,7 +73,7 @@
 - name: 'Rob Sefer'
   group: 'groom'
   file: 'rob.jpg'
-  description: "CEO of Sefer Design Co. (a one-stop shop for all your design needs). Rob is the creator of this website and our save-the-dates, and is one of the best friends anyone could ask for. He's sacrificing his weekly <em>Saturday Stations</em> to be a part of the wedding, and it means a lot to me."
+  description: "CEO of Sefer Design Co. (a one-stop shop for all your design needs). Rob is the creator of this website and our save-the-dates, and is one of the best friends anyone could ask for. He's sacrificing his weekly Saturday Stations to be a part of the wedding, and it means a lot to me."
 - name: 'Scott Skuteris'
   group: 'groom'
   file: 'scott.jpg'
