--- a/package.json
+++ b/package.json
@@ -30,10 +30,8 @@
     "gulp-uglify": "^3.0.0",
     "gulp-uglifycss": "^1.0.9",
     "imagemin-pngquant": "^5.1.0",
-    "install": "^0.11.0",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
-    "jshint-stylish-notifier": "^0.1.0",
-    "npm": "^6.0.0"
+    "jshint-stylish-notifier": "^0.1.0"
   }
 }
