Added catie gif

--- a/_src/_data/members.yml
+++ b/_src/_data/members.yml
@@ -13,6 +13,7 @@
 - name: 'Catie Schwan'
   group: 'bride'
   file: 'catie.jpg'
+  file_full: 'catie.gif'
   description: 'A Freshman year dorm best, real life roommate of 4 years, and the girl who brings out the most adventure in my soul. The only person in the world that could convince me to start watching anime.'
 - name: 'Courtney Bestler'
   group: 'bride'
