--- a/_src/_data/members.yml
+++ b/_src/_data/members.yml
@@ -3,7 +3,7 @@
   group: 'bride'
   file: 'kait.jpg'
   file_full: 'kait.jpg'
-  description: "BFF and partner in crime of the last 28 years. Share intense love of Taylor Swift and dogs. Don't share love of CrossFit."
+  description: "BFF and partner in crime for the last 28 years. Share intense love of Taylor Swift and dogs. Don't share love of CrossFit."
 - name: 'Amanda Rysiewicz'
   title: 'Matron of Honor'
   group: 'bride'
@@ -39,7 +39,7 @@
   group: 'bride'
   file: 'marykate.jpg'
   file_full: 'marykate.jpg'
-  description: 'You used to be able to find us traveling to Delaware, New Orleans, and all over Chicago for music festivals and concerts. Now, you are more likely to find us Monday nights crafting haikus and spells and utilizing them on the bocce court.'
+  description: 'You used to be able to find us traveling to Delaware, New Orleans, and all over Chicago for music festivals and concerts. Now, you are more likely to find us crafting haikus and spells and utilizing them on the bocce court on Monday nights.'
 - name: 'Megan McGuire'
   group: 'bride'
   file: 'megan.jpg'
@@ -49,7 +49,7 @@
   group: 'bride'
   file: 'sarah.jpg'
   file_full: 'sarah.jpg'
-  description: 'My fried chicken club better-half, always inspiring me to have a greener thumb and pick up ALL of the new and exciting hobbies (homemade wreaths) and trying ALL the new activities (river tubing).'
+  description: 'My fried chicken club better-half, always inspiring me to have a greener thumb and pick up ALL of the new and exciting hobbies (homemade wreaths) and try ALL the new activities (river tubing).'
 - name: 'Andy Roan'
   title: 'Best Man, Brother of the Groom'
   group: 'groom'
