--- a/_src/_data/members.yml
+++ b/_src/_data/members.yml
@@ -54,7 +54,7 @@
   title: 'Best Man, Brother of the Groom'
   group: 'groom'
   file: 'andy.jpg'
-  description: "Great brother, soon-to-be father and 3-time Stanley Cup Champion with the rings to prove it. One of the best guys you'll ever meet and an easy choice for co-best man."
+  description: "Great brother, new father, and 3-time Stanley Cup Champion with the rings to prove it. One of the best guys you'll ever meet and an easy choice for co-best man."
 - name: 'Matt Roan'
   title: 'Best Man, Brother of the Groom'
   group: 'groom'
