--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ distbase: './dist'
 imagebase: './dist/images'
 wedding_date: 'January 5, 2019'
 wedding_location: 'Chicago, Illinois'
+production_url: 'https://briandjase.com'
 
 # Build settings
 permalink: pretty
